# git-anon

./: .gitignore  Cargo.toml  README.md
src/: anonymize.rs  config.rs  git.rs  lib.rs  main.rs
