[package]
name = "git-anon"
version = "0.1.0"
edition = "2024"
authors = ["Ludwig"]
description = "A tool for anonymizing git repositories"
license = "MIT"
repository = ""

[dependencies]
git2 = { version = "0.19", features = ["vendored-openssl"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"
dialoguer = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
indicatif = "0.17"
chrono = "0.4"
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[[bin]]
name = "git-anon"
path = "src/main.rs"
